--- a/sass/style.scss
+++ b/sass/style.scss
@@ -700,7 +700,7 @@ body {
 
       h2 {
         font-size: 4vmax;
-        padding: 15vmax 3vmax;
+        padding: 15vmax 0;
       }
 
       .partnerscomp {
@@ -728,8 +728,10 @@ body {
 
     @media (max-width: 30cm) {
       .sec6 {
+        padding: 0 2.5vmax;
+
         h2 {
-          padding: 12vmax 2.5vmax;
+          padding: 12vmax 0vmax;
         }
 
         .partnerscomp {
@@ -740,6 +742,7 @@ body {
 
     .sec7 {
       position: relative;
+      height: fit-content;
       width: 100%;
       background-color: #fff;
 
@@ -747,8 +750,8 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100%;
         height: 100vh;
+        width: 100%;
 
         h1 {
           font-size: 30vmax;
@@ -762,15 +765,21 @@ body {
         height: fit-content;
         width: 100%;
 
+        .randombox {
+          height: 100vh;
+          width: 100%;
+        }
+
         .cardbox {
           height: fit-content;
           width: 100%;
 
-          &:nth-child(1) {
+          &:nth-child(1),
+          &:nth-child(3) {
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            padding-left: 12vmax;
+            padding-left: 12.5vmax;
           }
 
           &:nth-child(2) {
@@ -780,16 +789,94 @@ body {
             padding-right: 2.5vmax;
           }
 
-          &:nth-child(3) {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-
           .card {
-            width: 25vw;
-            height: 38vw;
-            background-color: red;
+            width: 25vmax;
+            height: 42vmax;
+            z-index: 999;
+
+            .top {
+              height: 90%;
+              width: 100%;
+
+              img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+              }
+            }
+
+            .bottom {
+              height: 10%;
+              width: 100%;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+
+              h4 {
+                color: #000;
+                font-size: 1.9vmax;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    @media (max-width: 30cm) {
+      .sec7 {
+        .headingbox {
+          h1 {
+            font-size: 20vmax;
+          }
+        }
+
+        .cbholder {
+          .cardbox {
+            height: 50vh;
+
+            &:nth-child(1),
+            &:nth-child(3) {
+              padding-left: 9.7vmax;
+            }
+          }
+        }
+      }
+    }
+
+    @media (max-width: 15cm) {
+      .sec7 {
+        .headingbox {
+          h1 {
+            font-size: 14vmax;
+          }
+        }
+
+        .cbholder {
+          .cardbox {
+            height: 60vh;
+
+            &:nth-child(1),
+            &:nth-child(3) {
+              justify-content: center;
+              padding-left: 0;
+            }
+
+            .card {
+              width: 30vmax;
+              height: 50vmax;
+
+              .top {
+                height: 85%;
+              }
+
+              .bottom {
+                height: 15%;
+
+                h4 {
+                  font-size: 3vmax;
+                }
+              }
+            }
           }
         }
       }
