--- a/sass/style.css
+++ b/sass/style.css
@@ -174,6 +174,9 @@ body {
     height: 8vmax;
     padding: 0 2.5vmax;
   }
+  .nav img {
+    height: 3vmax;
+  }
   .nav .linkbox {
     gap: 3vmax;
   }
@@ -208,6 +211,7 @@ body {
   width: 100%;
   color: #fff;
   background-color: black;
+  cursor: default;
 }
 .wrapper .sec1 {
   position: relative;
@@ -332,7 +336,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 3vmax;
 }
 .wrapper .sections-holder .sec4 h3 .line {
   display: inline-block;
@@ -382,6 +385,12 @@ body {
 .wrapper .sections-holder .sec4 .rowtext .button:hover .opening {
   height: 100%;
   transition: 0.25s linear;
+}
+.wrapper .sections-holder .sec4:nth-child(2) {
+  margin-top: 3vmax;
+}
+.wrapper .sections-holder .sec4:nth-child(3) {
+  margin-bottom: 4vmax;
 }
 @media (max-width: 30cm) {
   .wrapper .sections-holder .sec4 {
@@ -747,4 +756,122 @@ body {
   .wrapper .sections-holder .sec7 .cbholder .cardbox .card .bottom h4 {
     font-size: 3vmax;
   }
+}
+.wrapper .sections-holder .footer {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  background-color: #000;
+}
+.wrapper .sections-holder .footer .fleft {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10vmax;
+  width: 50%;
+  border-right: 1px solid #888;
+}
+.wrapper .sections-holder .footer .fleft h3 {
+  font-size: 3.5vmax;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-bottom: 1vmax;
+}
+.wrapper .sections-holder .footer .fleft img {
+  margin: 3vmax 0;
+  width: 60%;
+}
+.wrapper .sections-holder .footer .fleft input {
+  width: 100%;
+  background-color: transparent;
+  color: rgba(68, 68, 68, 0.2666666667);
+  border: none;
+  font-weight: 600;
+  padding-bottom: 1vmax;
+  border-bottom: 1px solid #333;
+}
+.wrapper .sections-holder .footer .fleft .button {
+  background-color: #000;
+  color: #fff;
+  padding: 0.5vmax 1.2vmax;
+  position: relative;
+  overflow: hidden;
+  border-radius: 100px;
+  border: 1px solid #fff;
+  margin-top: 2vmax;
+  margin-left: 2vmax;
+}
+.wrapper .sections-holder .footer .fleft .button span {
+  position: relative;
+  z-index: 999;
+}
+.wrapper .sections-holder .footer .fleft .button .opening {
+  position: absolute;
+  z-index: 99;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 0%;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+  transition: 0.25s ease-out;
+}
+.wrapper .sections-holder .footer .fleft .button:hover {
+  color: #000;
+  cursor: pointer;
+}
+.wrapper .sections-holder .footer .fleft .button:hover .opening {
+  height: 100%;
+  transition: 0.25s linear;
+}
+.wrapper .sections-holder .footer .fright {
+  width: 50%;
+}
+.wrapper .sections-holder .footer .fright a {
+  position: relative;
+  display: block;
+  padding: 1.4vmax 3vmax;
+  border-right: 1px solid #888;
+  border-bottom: 1px solid;
+  background-color: #000;
+  color: #fff;
+  font-family: "Aeonik";
+  text-decoration: none;
+}
+.wrapper .sections-holder .footer .fright a span {
+  position: relative;
+  z-index: 999;
+  font-size: 2.3vmax;
+  font-weight: 400;
+}
+.wrapper .sections-holder .footer .fright a .opening {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 0px;
+  background-color: #fff;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+}
+.wrapper .sections-holder .footer .fright a:hover .opening {
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+  height: 100%;
+}
+.wrapper .sections-holder .footer .fright a:hover {
+  color: #000;
+}
+.wrapper .sections-holder .footer .fright .linkbox {
+  display: flex;
+  gap: 2vmax;
+  padding: 1.4vmax 3vmax;
+}
+.wrapper .sections-holder .footer .fright .linkbox i {
+  font-size: 1.5vmax;
+  padding: 0.7vmax;
+  border: 1px solid #888;
+  border-radius: 50%;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
