--- a/sass/style.scss
+++ b/sass/style.scss
@@ -197,6 +197,10 @@ body {
     height: 8vmax;
     padding: 0 2.5vmax;
 
+    img {
+      height: 3vmax;
+    }
+
     .linkbox {
       gap: 3vmax;
 
@@ -242,6 +246,7 @@ body {
   width: 100%;
   color: #fff;
   background-color: black;
+  cursor: default;
 
   .sec1 {
     position: relative;
@@ -381,7 +386,6 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 3vmax;
 
         .line {
           display: inline-block;
@@ -439,6 +443,14 @@ body {
             transition: 0.25s linear;
           }
         }
+      }
+
+      &:nth-child(2) {
+        margin-top: 3vmax;
+      }
+
+      &:nth-child(3) {
+        margin-bottom: 4vmax;
       }
     }
 
@@ -877,6 +889,142 @@ body {
                 }
               }
             }
+          }
+        }
+      }
+    }
+
+    .footer {
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      background-color: #000;
+
+      .fleft {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0 10vmax;
+        width: 50%;
+        border-right: 1px solid #888;
+
+        h3 {
+          font-size: 3.5vmax;
+          font-weight: 400;
+          text-transform: capitalize;
+          margin-bottom: 1vmax;
+        }
+
+        img {
+          margin: 3vmax 0;
+          width: 60%;
+        }
+
+        input {
+          width: 100%;
+          background-color: transparent;
+          color: #4444;
+          border: none;
+          font-weight: 600;
+          padding-bottom: 1vmax;
+          border-bottom: 1px solid #333;
+        }
+
+        .button {
+          background-color: #000;
+          color: #fff;
+          padding: 0.5vmax 1.2vmax;
+          position: relative;
+          overflow: hidden;
+          border-radius: 100px;
+          border: 1px solid #fff;
+          margin-top: 2vmax;
+          margin-left: 2vmax;
+
+          span {
+            position: relative;
+            z-index: 999;
+          }
+
+          .opening {
+            position: absolute;
+            z-index: 99;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 0%;
+            background-color: #fff;
+            transform: translate(-50%, -50%);
+            transition: 0.25s ease-out;
+          }
+
+          &:hover {
+            color: #000;
+            cursor: pointer;
+          }
+
+          &:hover .opening {
+            height: 100%;
+            transition: 0.25s linear;
+          }
+        }
+      }
+
+      .fright {
+        width: 50%;
+
+        a {
+          position: relative;
+          display: block;
+          padding: 1.4vmax 3vmax;
+          border-right: 1px solid #888;
+          border-bottom: 1px solid;
+          background-color: #000;
+          color: #fff;
+          font-family: "Aeonik";
+          text-decoration: none;
+
+          span {
+            position: relative;
+            z-index: 999;
+            font-size: 2.3vmax;
+            font-weight: 400;
+          }
+
+          .opening {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 0px;
+            background-color: #fff;
+            transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+          }
+
+          &:hover .opening {
+            transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+            height: 100%;
+          }
+
+          &:hover {
+            color: #000;
+          }
+        }
+
+        .linkbox {
+          display: flex;
+          gap: 2vmax;
+          padding: 1.4vmax 3vmax;
+
+          i {
+            font-size: 1.5vmax;
+            padding: 0.7vmax;
+            border: 1px solid #888;
+            border-radius: 50%;
+            cursor: pointer;
           }
         }
       }
