--- a/sass/style.css
+++ b/sass/style.css
@@ -414,6 +414,9 @@ body {
     margin-top: 4vmax;
     margin-left: 0.5vmax;
   }
+  .wrapper .sections-holder .sec4:nth-child(3) {
+    margin-bottom: 6vmax;
+  }
 }
 .wrapper .sections-holder .sec5 {
   display: flex;
@@ -670,12 +673,10 @@ body {
   color: #000;
 }
 .wrapper .sections-holder .sec7 .cbholder {
+  position: absolute;
+  top: 100%;
   height: -moz-fit-content;
   height: fit-content;
-  width: 100%;
-}
-.wrapper .sections-holder .sec7 .cbholder .randombox {
-  height: 100vh;
   width: 100%;
 }
 .wrapper .sections-holder .sec7 .cbholder .cardbox {
@@ -801,7 +802,6 @@ body {
   border-radius: 100px;
   border: 1px solid #fff;
   margin-top: 2vmax;
-  margin-left: 2vmax;
 }
 .wrapper .sections-holder .footer .fleft .button span {
   position: relative;
@@ -874,4 +874,53 @@ body {
   border: 1px solid #888;
   border-radius: 50%;
   cursor: pointer;
+}
+@media (max-width: 30cm) {
+  .wrapper .sections-holder .footer {
+    height: -moz-fit-content;
+    height: fit-content;
+    flex-direction: column;
+  }
+  .wrapper .sections-holder .footer .fleft {
+    height: 70vh;
+    width: 100%;
+    padding: 0 10vmax;
+  }
+  .wrapper .sections-holder .footer .fleft h3 {
+    font-size: 5vmax;
+    line-height: 5vmax;
+  }
+  .wrapper .sections-holder .footer .fleft p {
+    margin-top: 1vmax;
+    letter-spacing: 0.05vmax;
+  }
+  .wrapper .sections-holder .footer .fleft .button {
+    padding: 0.8vmax 1.5vmax;
+    margin-top: 4vmax;
+  }
+  .wrapper .sections-holder .footer .fright {
+    width: 100%;
+  }
+  .wrapper .sections-holder .footer .fright a {
+    padding: 2.8vmax 2.5vmax;
+  }
+  .wrapper .sections-holder .footer .fright a span {
+    font-size: 3.3vmax;
+  }
+  .wrapper .sections-holder .footer .fright .linkbox {
+    gap: 2.5vmax;
+    padding: 2.8vmax 2.5vmax;
+  }
+  .wrapper .sections-holder .footer .fright .linkbox i {
+    font-size: 3vmax;
+    padding: 1.4vmax;
+    border: 1px solid #888;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+}
+@media (max-width: 15cm) {
+  .wrapper .sections-holder .footer .fleft {
+    padding: 0 2.5vmax;
+  }
 }/*# sourceMappingURL=style.css.map */
