last commit & end of project

--- a/sass/font.css
+++ b/sass/font.css
@@ -1,4 +1,9 @@
 @font-face {
+  font-family: aeonikLight;
+  src: url(../fonts/Aeonik-Light.otf);
+}
+
+@font-face {
   font-family: aeonikRegular;
   src: url(../fonts/Aeonik-Regular.otf);
 }
