--- a/sass/style.scss
+++ b/sass/style.scss
@@ -843,6 +843,10 @@ body {
           margin-bottom: 1vmax;
         }
 
+        p {
+          letter-spacing: 0.02vmax;
+        }
+
         img {
           margin: 3vmax 0;
           width: 60%;
@@ -851,10 +855,10 @@ body {
         input {
           width: 100%;
           background-color: transparent;
-          color: #4444;
+          color: #fff;
           border: none;
-          font-weight: 600;
-          padding-bottom: 1vmax;
+          font-weight: 500;
+          padding: 0.8vmax;
           border-bottom: 1px solid #333;
         }
 
@@ -944,12 +948,42 @@ body {
           gap: 2vmax;
           padding: 1.4vmax 3vmax;
 
-          i {
-            font-size: 1.5vmax;
-            padding: 0.7vmax;
-            border: 1px solid #888;
+          span {
+            position: relative;
+            background-color: #000;
+            padding: 0.7vmax 0;
             border-radius: 50%;
-            cursor: pointer;
+            overflow: hidden;
+
+            i {
+              position: relative;
+              z-index: 999;
+              font-size: 1.5vmax;
+              padding: 0.7vmax;
+              border: 1px solid #888;
+              border-radius: 50%;
+              cursor: pointer;
+            }
+
+            .opener {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              width: 100%;
+              height: 0px;
+              background-color: #fff;
+              transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+            }
+
+            &:hover .opener {
+              transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+              height: 100%;
+            }
+
+            &:hover {
+              color: #000;
+            }
           }
         }
       }
@@ -996,12 +1030,16 @@ body {
             gap: 2.5vmax;
             padding: 2.8vmax 2.5vmax;
 
-            i {
-              font-size: 3vmax;
-              padding: 1.4vmax;
-              border: 1px solid #888;
-              border-radius: 50%;
-              cursor: pointer;
+            span {
+              padding: 1.4vmax 0;
+
+              i {
+                font-size: 2.5vmax;
+                padding: 1.4vmax;
+                border: 1px solid #888;
+                border-radius: 50%;
+                cursor: pointer;
+              }
             }
           }
         }
